# SmartHome

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DevLog.md  README.md  run-clang-tidy.sh
include/: CMakeLists.txt  air_fryer.hpp  demo_device.hpp  device.h  device.hpp  device_data.hpp  real_ac.hpp  room.hpp  smart_manager.hpp  utils.hpp  washer_dryer.hpp  world.hpp
lib/magic_enum/: magic_enum.hpp
src/: CMakeLists.txt  air_fryer.cpp  demo_device.cpp  device.cpp  main.cpp  real_ac.cpp  smart_manager.cpp  washer_dryer.cpp
tests/: CMakeLists.txt  test_smart_home.cpp
